# telepace-next

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  plan.md  pyproject.toml  telepace-vs-listenlabs-PRD.md
.claude/: ecc-tools.json  identity.json
.claude/agents/: verifier.md
.claude/commands/: check.md
.codex/: AGENTS.md
.github/workflows/: ci.yml  deploy.yml
agents/: __init__.py
agents/analyst/: __init__.py  main.py
agents/coordinator/: __init__.py  main.py
agents/designer/: __init__.py  main.py
agents/interviewer/: __init__.py  main.py
agents/orchestrator/: __init__.py  main.py
agents/shared/: __init__.py  llm.py  prompts.py
core/: __init__.py  constants.py
core/domain/: __init__.py  models.py
core/events/: __init__.py  schema.py
core/protocols/: __init__.py  commands.py  mcp_tools.py  queries.py
deploy/: Dockerfile.api  Dockerfile.frontend  README.md  compose.prod.yml  deploy.sh  docker-compose.dev.yml  fly.toml
docs/: agent-100-blueprint.md  agents.md  architecture.md  design-system.md  hydration-mismatch-and-zh-audit.md  issue-pricing-and-positioning-epic.md  local-fullstack-selftest.md  protocols.md  roadmap.md  scenarios.md  scoreboard.md  seo-design.md  ui-ux-optimization-plan.md
eval/: __init__.py
frontend/: package.json  playwright.config.ts  pnpm-lock.yaml
harness/: __init__.py  memory.py  observability.py  orchestrator.py  router.py
interfaces/: __init__.py
scripts/: clean_default_org.py  dev.sh  doctor.sh  down.sh  smoke_llm.py  up.sh
storage/: __init__.py
voice/: __init__.py
(+438 files in other folders)
